added history showing routes